fix panels shadows and stretching

--- a/src/features/layers_panel/components/MapLayersPanel/MapLayersPanel.module.css
+++ b/src/features/layers_panel/components/MapLayersPanel/MapLayersPanel.module.css
@@ -1,7 +1,7 @@
 .panelContainer {
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow: auto;
   box-shadow: var(--elevation-1);
 }
 .panel {
@@ -31,6 +31,15 @@
   display: none;
 }
 
+/* laptop and below */
+@media screen and (max-width: 1900px) {
+  .panelContainer {
+    overflow: unset;
+    box-shadow: none;
+  }
+}
+
+/* mobile */
 @media screen and (max-width: 960px) {
   .panel.show {
     position: absolute;
