--- a/src/features/legend_panel/components/LegendPanel/LegendPanel.module.css
+++ b/src/features/legend_panel/components/LegendPanel/LegendPanel.module.css
@@ -1,11 +1,3 @@
-.panelContainer {
-  height: var(--panel-header-height);
-  min-height: var(--panel-header-height);
-  flex: 1 0 auto;
-  &.open {
-    height: auto;
-  }
-}
 .legendPanel {
   pointer-events: auto;
   position: relative;
@@ -70,9 +62,6 @@
 }
 
 @media screen and (max-width: 960px) {
-  .panelContainer {
-    flex: 0 1 auto;
-  }
   .legendPanel.show {
     position: absolute;
     margin: 0;
